# jpacStyle

./: .gitignore  CMakeLists.txt  README.md  importStyle.C
cpp/: jpacColors.cpp  jpacStyle.cpp  jpacStyle.hpp  quickPlots.cpp
examples/: 2dgaussian.cpp  bessel.cpp  exp_xy.cpp  hankel.cpp
include/: jpacGraph1D.hpp  jpacGraph1Dc.hpp  jpacGraph2D.hpp  jpacPlot.hpp  jpacPlotter.hpp  jpacUtils.hpp
jupyter/: bessel.ipynb
src/: jpacColors.cpp  jpacGraph1D.cpp  jpacGraph1Dc.cpp  jpacGraph2D.cpp  jpacPlotter.cpp  jpacStyle.cpp  jpacUtils.cpp
